--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Example project with React + Enzyme + Ava",
   "scripts": {
-    "test": "ava"
+    "test": "xo && ava"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,14 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.6.5",
     "enzyme": "^2.2.0",
+    "eslint-config-xo-react": "^0.6.0",
+    "eslint-plugin-react": "^4.3.0",
     "jsdom": "^8.3.1",
-    "react-addons-test-utils": "^15.0.1"
+    "react-addons-test-utils": "^15.0.1",
+    "xo": "^0.14.0"
+  },
+  "xo": {
+    "extends": "xo-react"
   },
   "dependencies": {
     "react": "^15.0.1",
